made change in controls screen

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div id="score"></div>
     <div id="control-keys">
       <div id="control-head">Controls</div>
-      <div>Left 👉 A or ➡️</div>
-      <div>Right 👉 D or ⬅️</div>
+      <div>Left 👉 A or ⬅️</div>
+      <div>Right 👉 D or ➡️</div>
       <div>Up 👉 W or ⬆️</div>
       <div>Down 👉 S or ⬇️</div>
     </div>
